@@ -16,6 +16,7 @@
  */
 
 /* Defines */
+#define DIR_DELIMETER_CHAR '/'
 
 /* Directory List file types */
 #define DIRLIST_FILETYPE_HIDDEN 1
@@ -46,6 +47,7 @@ struct {
 
 /* Function prototypes */
 void load_file_dialog_dirlist_init(void);
+void strcatdelimeter(char *toappendto);
 char *file_dialog_basename(char *dir);
 void file_dialog_cd(char *dir, char *direntry);
 void dirlist_populate(char *dir, char **dirlist, int *dirlist_sizeof,
