@@ -78,18 +78,21 @@ void sdl_zxprinter_init(void) {
 
 	#if defined(PLATFORM_GP2X)
 		strcpy(zxprinter.filename, startdir);
-		strcat(zxprinter.filename, "/");
+		strcatdelimeter(zxprinter.filename);
 	#elif defined(PLATFORM_ZAURUS)
 		strcpy(zxprinter.filename, getenv ("HOME"));
-		strcat(zxprinter.filename, "/" LOCAL_DATA_DIR "/");
+		strcatdelimeter(zxprinter.filename);
+		strcat(zxprinter.filename, LOCAL_DATA_DIR);
+		strcatdelimeter(zxprinter.filename);
 	#elif defined(__amigaos4__)
 		strcpy(zxprinter.filename, LOCAL_DATA_DIR);
-		if((zxprinter.filename[strlen(zxprinter.filename)-1] != '/') &&
-			(zxprinter.filename[strlen(zxprinter.filename)-1] != ':'))
-			strcat(zxprinter.filename, "/");
+		if (zxprinter.filename[strlen(zxprinter.filename) - 1] != ':')
+			strcatdelimeter(zxprinter.filename);
 	#else
 		strcpy(zxprinter.filename, getenv ("HOME"));
-		strcat(zxprinter.filename, "/" LOCAL_DATA_DIR "/");
+		strcatdelimeter(zxprinter.filename);
+		strcat(zxprinter.filename, LOCAL_DATA_DIR);
+		strcatdelimeter(zxprinter.filename);
 	#endif
 
 	/* Create a unique filename using the date and time */
@@ -116,14 +119,16 @@ void local_data_dir_init(void) {
 		strcpy(foldername, "");	/* Avoids warnings */
 	#elif defined(PLATFORM_ZAURUS)
 		strcpy(foldername, getenv ("HOME"));
-		strcat(foldername, "/" LOCAL_DATA_DIR);
+		strcatdelimeter(foldername);
+		strcat(foldername, LOCAL_DATA_DIR);
 		mkdir(foldername, 0755);
 	#elif defined(__amigaos4__)
 		strcpy(foldername, LOCAL_DATA_DIR);
 		mkdir(foldername, 0755);
 	#else
 		strcpy(foldername, getenv ("HOME"));
-		strcat(foldername, "/" LOCAL_DATA_DIR);
+		strcatdelimeter(foldername);
+		strcat(foldername, LOCAL_DATA_DIR);
 		mkdir(foldername, 0755);
 	#endif
 }
@@ -149,15 +154,15 @@ void sdl_rcfile_read(void) {
 
 	#if defined(PLATFORM_GP2X)
 		strcpy(rcfile.filename, startdir);
-		strcat(rcfile.filename, "/");
+		strcatdelimeter(rcfile.filename);
 	#elif defined(PLATFORM_ZAURUS)
 		strcpy(rcfile.filename, getenv ("HOME"));
-		strcat(rcfile.filename, "/");
+		strcatdelimeter(rcfile.filename);
 	#elif defined(__amigaos4__)
 		rcfile.filename[0] = '\0';
 	#else
 		strcpy(rcfile.filename, getenv ("HOME"));
-		strcat(rcfile.filename, "/");
+		strcatdelimeter(rcfile.filename);
 	#endif
 	strcat(rcfile.filename, RESOURCE_FILE);
 
@@ -932,7 +937,8 @@ int fonts_init(void) {
 			ptrfont = &zx82font;
 		}
 		if (ptrfont->original == NULL) {
-			strcpy(filename, PACKAGE_DATA_DIR "/");
+			strcpy(filename, PACKAGE_DATA_DIR);
+			strcatdelimeter(filename);
 			if (count == BMF_FONT_ZX80) {
 				strcat(filename, IMG_ZX80_FONT);
 			} else if (count == BMF_FONT_ZX81) {
@@ -1035,9 +1041,13 @@ int vkeyb_init(void) {
 			(count == 1 && vkeyb.zx81original == NULL)) {
 			/* Prepare the relevant filename */
 			if (count == 0) {
-				strcpy(filename, PACKAGE_DATA_DIR "/" IMG_ZX80_KYBD);
+				strcpy(filename, PACKAGE_DATA_DIR);
+				strcatdelimeter(filename);
+				strcat(filename, IMG_ZX80_KYBD);
 			} else {
-				strcpy(filename, PACKAGE_DATA_DIR "/" IMG_ZX81_KYBD);
+				strcpy(filename, PACKAGE_DATA_DIR);
+				strcatdelimeter(filename);
+				strcat(filename, IMG_ZX81_KYBD);
 			}
 			/* Load the bitmap */
 			if ((unconverted = SDL_LoadBMP(filename)) == NULL) {
@@ -1131,7 +1141,8 @@ int sz81icons_init(void) {
 
 	/* Load the original scale icons once */
 	if (sz81icons.original == NULL) {
-		strcpy(filename, PACKAGE_DATA_DIR "/");
+		strcpy(filename, PACKAGE_DATA_DIR);
+		strcatdelimeter(filename);
 		strcat(filename, IMG_SZ81_ICONS);
 		/* Load the bitmap */
 		if ((unconverted = SDL_LoadBMP(filename)) == NULL) {
@@ -1314,9 +1325,13 @@ int sdl_zxroms_init(void) {
 			(count == 1 && !sdl_zx81rom.state)) {
 			/* Prepare the relevant filename */
 			if (count == 0) {
-				strcpy(filename, PACKAGE_DATA_DIR "/" ROM_ZX80);
+				strcpy(filename, PACKAGE_DATA_DIR);
+				strcatdelimeter(filename);
+				strcat(filename, ROM_ZX80);
 			} else {
-				strcpy(filename, PACKAGE_DATA_DIR "/" ROM_ZX81);
+				strcpy(filename, PACKAGE_DATA_DIR);
+				strcatdelimeter(filename);
+				strcat(filename, ROM_ZX81);
 			}
 			/* Open the ROM */
 			if ((fp = fopen(filename, "rb")) == NULL) {
