@@ -43,6 +43,7 @@
 #define MSG_BOX_TIMEOUT_SOUND_VOLUME 1500
 #define MSG_BOX_TIMEOUT_CONTROL_REMAPPER 750
 #define MSG_BOX_TIMEOUT_LOAD_FAILED 1500
+#define MSG_BOX_TIMEOUT_SAVE_FAILED 1500
 
 /* Variables */
 SDL_Surface *wm_icon;
