@@ -1,3 +1,7 @@
+2011-01-16 Thunor <thunorsif_at_hotmail.com>
+* Replaced z81's save_p: ZX80 files can now be named by default as date
+  and time stamped or extracted from a xxxx REM SAVE "progname" line.
+
 2011-01-14 Thunor <thunorsif_at_hotmail.com>
 * Added forced (non-LOAD) program loading via the load file dialog.
 * Replaced z81's machine reset method with a thorough emulator reset.
